examples/test/testpolicy7839.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy7839
  namespace: namespace279
spec:
  podSelector:
    matchLabels:
      key35: value8
      key33: value8
      key31: value35
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key49: value25
          key36: value42
      podSelector:
        matchLabels:
          key10: value11
          key14: value15
